objects/EUR_CRM_ObjPromo_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_ObjPromo_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>O/P Target</label>
        <referenceTo>EUR_CRM_ObjPromo_Target__c</referenceTo>
        <relationshipName>O_P_Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ObjPromo__c</fullName>
        <label>Objectives / Promotions</label>
        <referenceTo>EUR_CRM_ObjPromo__c</referenceTo>
        <relationshipName>O_P_Achievements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Action</label>
        <referenceTo>EUR_CRM_Visit_Action__c</referenceTo>
        <relationshipName>O_P_Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>O/P Achievement (EU)</label>
    <nameField>
        <displayFormat>OPA - {0000000000}</displayFormat>
        <label>O/P Achievement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>O/P Achievement (EU)</pluralLabel>
    <recordTypes>
        <fullName>DE_OFF_Ad_hoc_Agree_To_Buy</fullName>
        <active>true</active>
        <label>DE OFF Ad hoc Agreement To Buy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_2nd_PL_Do_TMKT_Doc</fullName>
        <active>true</active>
        <label>DE OFF 2nd Placement Do TMKT Doc</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_2nd_PL_Present_Theme</fullName>
        <active>true</active>
        <label>DE OFF 2nd Placement Present Theme</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_2nd_PL_Sell_In_Qty_Carton</fullName>
        <active>true</active>
        <label>DE OFF 2nd Placement Sell In Qty - Carton</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_2nd_PL_Sell_In_Qty_Gondelkopf</fullName>
        <active>true</active>
        <label>DE OFF 2nd Placement Sell In Qty - Gondelkopf</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_2nd_PL_Sell_In_Qty_Promo_Display</fullName>
        <active>true</active>
        <label>DE OFF 2nd Placement Sell In Qty - Promo Display</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_2nd_PL_Sell_In_Qty_Razz_Fazz</fullName>
        <active>true</active>
        <label>DE OFF 2nd Placement Sell In Qty - Razz Fazz</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_2nd_PL_Sell_In_Qty_Standard</fullName>
        <active>true</active>
        <label>DE OFF 2nd Placement Sell In Qty - Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_2nd_PL_Sell_In_Qty_Theme</fullName>
        <active>true</active>
        <label>DE OFF 2nd Placement Sell In Qty - Theme</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_2nd_Placement_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE OFF 2nd Placement Sell In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Ad_Hoc_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE OFF Ad Hoc Sell In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Dist_Drive_Listing_Check</fullName>
        <active>true</active>
        <label>DE OFF Dist Drive Listing Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Leaflet_Campaign_Agree_To_Buy</fullName>
        <active>true</active>
        <label>DE OFF Leaflet Campaign Agreement To Buy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Leaflet_Campaign_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE OFF Leaflet Campaign Sell In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Sales_Drive_SKU_Bottles_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE OFF Sales Drive SKU Bottles Sell-In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Sales_Drive_SKU_Displays_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE OFF Sales Drive SKU Displays Sell-In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Sales_Drive_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE OFF Sales Drive Sell-In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Tasting_Discussion</fullName>
        <active>true</active>
        <label>DE OFF Tasting Discussion</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Tasting_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE OFF Tasting Sell In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Trade_Fair_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE OFF Trade Fair Sell In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_ON_TMKT_Promo_Confirm_Participation</fullName>
        <active>true</active>
        <label>DE ON TMKT Promo Confirm Participation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_ON_TMKT_Promo_Enter_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE ON TMKT Promo Enter Sell In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_ON_TMKT_Promo_Presentation</fullName>
        <active>true</active>
        <label>DE ON TMKT Promo Presentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_ObjPromo_Achievement</fullName>
        <active>true</active>
        <label>DE O/P Achievement</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Objective_Commitment_Achievement</fullName>
        <active>true</active>
        <label>FI Objective Commitment Achievement</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Sell_In_Qty</fullName>
        <active>true</active>
        <label>FI Sell In Qty</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>